Update schema for PostgreSQL and fix seed

--- a/.env.vercel
+++ b/.env.vercel
@@ -2,7 +2,8 @@
 # Copy semua variable ini ke Vercel Dashboard → Settings → Environment Variables
 
 # Database (Supabase)
-DATABASE_URL="postgresql://postgres:C8Mo7Vas9PmGSQH0@db.qjliveyhaqaywhyxnakj.supabase.co:5432/postgres"
+DATABASE_URL="postgresql://postgres.qjliveyhaqaywhyxnakj:C8Mo7Vas9PmGSQH0@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres"
+DIRECT_URL="postgresql://postgres:C8Mo7Vas9PmGSQH0@db.qjliveyhaqaywhyxnakj.supabase.co:5432/postgres"
 
 # NextAuth Configuration
 NEXTAUTH_URL="https://systemalamin.vercel.app"
