Update all URLs to madrasahalamin.vercel.app

--- a/.env.vercel
+++ b/.env.vercel
@@ -6,7 +6,7 @@ DATABASE_URL="postgresql://postgres.qjliveyhaqaywhyxnakj:C8Mo7Vas9PmGSQH0@aws-1-
 DIRECT_URL="postgresql://postgres:C8Mo7Vas9PmGSQH0@db.qjliveyhaqaywhyxnakj.supabase.co:5432/postgres"
 
 # NextAuth Configuration
-NEXTAUTH_URL="https://siakadalamin.vercel.app"
+NEXTAUTH_URL="https://madrasahalamin.vercel.app"
 NEXTAUTH_SECRET="OBsTc53SKNX0Vz9jiegQ7AqmyIZfhFCx"
 
 # App Information (Optional)
