docs: update vercel env to use neon database

--- a/.env.vercel
+++ b/.env.vercel
@@ -1,9 +1,8 @@
 # Environment Variables untuk Vercel
 # Copy semua variable ini ke Vercel Dashboard → Settings → Environment Variables
 
-# Database (Supabase)
-DATABASE_URL="postgresql://postgres.qjliveyhaqaywhyxnakj:C8Mo7Vas9PmGSQH0@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres"
-DIRECT_URL="postgresql://postgres:C8Mo7Vas9PmGSQH0@db.qjliveyhaqaywhyxnakj.supabase.co:5432/postgres"
+# Database (Neon PostgreSQL)
+DATABASE_URL="postgresql://neondb_owner:npg_a6sMHnbSfP7u@ep-withered-queen-aifmltu5-pooler.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require"
 
 # NextAuth Configuration
 NEXTAUTH_URL="https://madrasahalamin.vercel.app"
