feat: integrate Vercel Blob Storage for persistent file uploads

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,10 @@ NEXT_PUBLIC_SCHOOL_NAME="Madrasah Ibtidaiyah Al-Amin"
 # UPLOAD_DIR="./public/uploads"
 # MAX_FILE_SIZE="5242880" # 5MB in bytes
 
+# Vercel Blob Storage (Required for production file uploads)
+# Get token from: https://vercel.com/dashboard/stores
+# BLOB_READ_WRITE_TOKEN="vercel_blob_rw_xxxxxxxxxxxxx"
+
 # Email Configuration (Optional - for future features)
 # SMTP_HOST="smtp.gmail.com"
 # SMTP_PORT="587"
