--- a/.env.vercel
+++ b/.env.vercel
@@ -11,3 +11,8 @@ NEXTAUTH_SECRET="OBsTc53SKNX0Vz9jiegQ7AqmyIZfhFCx"
 # App Information (Optional)
 NEXT_PUBLIC_APP_NAME="AL-AMIN School Management System"
 NEXT_PUBLIC_SCHOOL_NAME="Madrasah Ibtidaiyah Al-Amin"
+
+# Vercel Blob Storage (REQUIRED for file uploads)
+# Get token from: https://vercel.com/dashboard/stores
+# Create a new Blob Store and copy the token
+# BLOB_READ_WRITE_TOKEN="vercel_blob_rw_xxxxxxxxxxxxx"
