--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.0",
     "@prisma/client": "^5.14.0",
+    "@vercel/blob": "^2.2.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
